[package]
name = "ccobalt"
version = "0.1.3"
authors = ["iku <iku@cleesim.com>"]
description = "A Rust library to download media using the Cobalt API."
documentation = "https://docs.rs/ccobalt"
homepage = "https://github.com/CleeSim/ccobalt"
repository = "https://github.com/CleeSim/ccobalt.git"
keywords = ["cobalt", "tools", "download", "api"]
license = "MIT"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"
